--- a/index.html
+++ b/index.html
@@ -1601,7 +1601,7 @@ secara berulang.</p>
 </div>
 <div id="definisi" class="section level2">
 <h2>Definisi</h2>
-<p>iterasi adalah proses eksekusi berulang pada suatu blok kode dalam
+<p>Iterasi adalah proses eksekusi berulang pada suatu blok kode dalam
 pemrograman hingga kondisi tertentu dipenuhi. Dengan menggunakan
 iterasi, pengembang dapat mengotomatisasi proses yang memerlukan
 eksekusi berulang tanpa harus menulis kode yang sama secara manual.
@@ -1632,8 +1632,8 @@ for (i in 1:5) {
 <h4>Flowchart For Loop</h4>
 <p>Berikut adalah flowchart sederhana yang menggambarkan alur kerja
 <strong>for loop</strong>:</p>
-<div class="grViz html-widget html-fill-item-overflow-hidden html-fill-item" id="htmlwidget-9e9a98540eb3fc0faebe" style="width:672px;height:480px;"></div>
-<script type="application/json" data-for="htmlwidget-9e9a98540eb3fc0faebe">{"x":{"diagram":"\ndigraph for_loop {\n    graph [rankdir=TB, bgcolor=white]\n    node [fontname=\"Arial\", fontsize=12, style=filled, fillcolor=\"#E3F2FD\", color=\"#1976D2\", shape=box]\n\n    Mulai [label=\"Mulai\", shape=oval, fillcolor=\"#A5D6A7\", color=\"#388E3C\"]\n    Inisialisasi [label=\"Inisialisasi: i = 1\"]\n    Kondisi [label=\"i <= 5?\", shape=diamond, fillcolor=\"#FFF9C4\", color=\"#FBC02D\"]\n    Eksekusi [label=\"Eksekusi blok kode\"]\n    Increment [label=\"i = i + 1\"]\n    Selesai [label=\"Selesai\", shape=oval, fillcolor=\"#EF9A9A\", color=\"#C62828\"]\n\n    Mulai -> Inisialisasi\n    Inisialisasi -> Kondisi\n    Kondisi -> Eksekusi [label=\"Ya\", color=\"#388E3C\"]\n    Eksekusi -> Increment\n    Increment -> Kondisi\n    Kondisi -> Selesai [label=\"Tidak\", color=\"#C62828\"]\n}\n","config":{"engine":"dot","options":null}},"evals":[],"jsHooks":[]}</script>
+<div class="grViz html-widget html-fill-item-overflow-hidden html-fill-item" id="htmlwidget-fb0d3785824d9ba45e19" style="width:672px;height:480px;"></div>
+<script type="application/json" data-for="htmlwidget-fb0d3785824d9ba45e19">{"x":{"diagram":"\ndigraph for_loop {\n    graph [rankdir=TB, bgcolor=white]\n    node [fontname=\"Arial\", fontsize=12, style=filled, fillcolor=\"#E3F2FD\", color=\"#1976D2\", shape=box]\n\n    Mulai [label=\"Mulai\", shape=oval, fillcolor=\"#A5D6A7\", color=\"#388E3C\"]\n    Inisialisasi [label=\"Inisialisasi: i = 1\"]\n    Kondisi [label=\"i <= 5?\", shape=diamond, fillcolor=\"#FFF9C4\", color=\"#FBC02D\"]\n    Eksekusi [label=\"Eksekusi blok kode\"]\n    Increment [label=\"i = i + 1\"]\n    Selesai [label=\"Selesai\", shape=oval, fillcolor=\"#EF9A9A\", color=\"#C62828\"]\n\n    Mulai -> Inisialisasi\n    Inisialisasi -> Kondisi\n    Kondisi -> Eksekusi [label=\"Ya\", color=\"#388E3C\"]\n    Eksekusi -> Increment\n    Increment -> Kondisi\n    Kondisi -> Selesai [label=\"Tidak\", color=\"#C62828\"]\n}\n","config":{"engine":"dot","options":null}},"evals":[],"jsHooks":[]}</script>
 </div>
 </div>
 <div id="while-loop" class="section level3">
@@ -1653,8 +1653,8 @@ while (i &lt;= 5) {
 <h4>Flowchart While Loop</h4>
 <p>Berikut adalah flowchart sederhana yang menggambarkan alur kerja
 <strong>while loop</strong>:</p>
-<div class="grViz html-widget html-fill-item-overflow-hidden html-fill-item" id="htmlwidget-4444a6eb44fe0c75f563" style="width:672px;height:480px;"></div>
-<script type="application/json" data-for="htmlwidget-4444a6eb44fe0c75f563">{"x":{"diagram":"\ndigraph while_loop {\n    graph [rankdir=TB, bgcolor=white]\n    node [fontname=\"Arial\", fontsize=12, style=filled, fillcolor=\"#E3F2FD\", color=\"#1976D2\", shape=box]\n\n    Mulai [label=\"Mulai\", shape=oval, fillcolor=\"#A5D6A7\", color=\"#388E3C\"]\n    Inisialisasi [label=\"Inisialisasi: i = 1\"]\n    Kondisi [label=\"i <= 5?\", shape=diamond, fillcolor=\"#FFF9C4\", color=\"#FBC02D\"]\n    Selesai [label=\"Selesai\", shape=oval, fillcolor=\"#EF9A9A\", color=\"#C62828\"]\n    Eksekusi [label=\"Eksekusi blok kode & i = i + 1\"]\n\n    Mulai -> Inisialisasi\n    Inisialisasi -> Kondisi\n    Kondisi -> Eksekusi [label=\"Ya\", color=\"#388E3C\"]\n    Eksekusi -> Kondisi\n    Kondisi -> Selesai [label=\"Tidak\", color=\"#C62828\"]\n}\n","config":{"engine":"dot","options":null}},"evals":[],"jsHooks":[]}</script>
+<div class="grViz html-widget html-fill-item-overflow-hidden html-fill-item" id="htmlwidget-687493a5b9d2b76ffe54" style="width:672px;height:480px;"></div>
+<script type="application/json" data-for="htmlwidget-687493a5b9d2b76ffe54">{"x":{"diagram":"\ndigraph while_loop {\n    graph [rankdir=TB, bgcolor=white]\n    node [fontname=\"Arial\", fontsize=12, style=filled, fillcolor=\"#E3F2FD\", color=\"#1976D2\", shape=box]\n\n    Mulai [label=\"Mulai\", shape=oval, fillcolor=\"#A5D6A7\", color=\"#388E3C\"]\n    Inisialisasi [label=\"Inisialisasi: i = 1\"]\n    Kondisi [label=\"i <= 5?\", shape=diamond, fillcolor=\"#FFF9C4\", color=\"#FBC02D\"]\n    Selesai [label=\"Selesai\", shape=oval, fillcolor=\"#EF9A9A\", color=\"#C62828\"]\n    Eksekusi [label=\"Eksekusi blok kode & i = i + 1\"]\n\n    Mulai -> Inisialisasi\n    Inisialisasi -> Kondisi\n    Kondisi -> Eksekusi [label=\"Ya\", color=\"#388E3C\"]\n    Eksekusi -> Kondisi\n    Kondisi -> Selesai [label=\"Tidak\", color=\"#C62828\"]\n}\n","config":{"engine":"dot","options":null}},"evals":[],"jsHooks":[]}</script>
 <blockquote>
 <p><strong>Catatan:</strong><br />
 Flowchart for dan while loop memang tampak mirip karena keduanya
@@ -1686,8 +1686,8 @@ repeat {
 <h4>Flowchart Repeat Loop</h4>
 <p>Berikut adalah flowchart sederhana yang menggambarkan alur kerja
 <strong>repeat loop</strong>:</p>
-<div class="grViz html-widget html-fill-item-overflow-hidden html-fill-item" id="htmlwidget-351f417753169b112ba2" style="width:672px;height:480px;"></div>
-<script type="application/json" data-for="htmlwidget-351f417753169b112ba2">{"x":{"diagram":"\ndigraph repeat_loop {\n    graph [rankdir=TB, bgcolor=white]\n    node [fontname=\"Arial\", fontsize=12, style=filled, fillcolor=\"#E3F2FD\", color=\"#1976D2\", shape=box]\n\n    Mulai [label=\"Mulai\", shape=oval, fillcolor=\"#A5D6A7\", color=\"#388E3C\"]\n    Inisialisasi [label=\"Inisialisasi: i = 1\"]\n    Eksekusi [label=\"Eksekusi blok kode\"]\n    Increment [label=\"i = i + 1\"]\n    Kondisi [label=\"i > 5?\", shape=diamond, fillcolor=\"#FFF9C4\", color=\"#FBC02D\"]\n    Selesai [label=\"Selesai\", shape=oval, fillcolor=\"#EF9A9A\", color=\"#C62828\"]\n\n    Mulai -> Inisialisasi\n    Inisialisasi -> Eksekusi\n    Eksekusi -> Increment\n    Increment -> Kondisi\n    Kondisi -> Eksekusi [label=\"Tidak\", color=\"#388E3C\"]\n    Kondisi -> Selesai [label=\"Ya\", color=\"#C62828\"]\n}\n","config":{"engine":"dot","options":null}},"evals":[],"jsHooks":[]}</script>
+<div class="grViz html-widget html-fill-item-overflow-hidden html-fill-item" id="htmlwidget-bdc7390ef561b59373a8" style="width:672px;height:480px;"></div>
+<script type="application/json" data-for="htmlwidget-bdc7390ef561b59373a8">{"x":{"diagram":"\ndigraph repeat_loop {\n    graph [rankdir=TB, bgcolor=white]\n    node [fontname=\"Arial\", fontsize=12, style=filled, fillcolor=\"#E3F2FD\", color=\"#1976D2\", shape=box]\n\n    Mulai [label=\"Mulai\", shape=oval, fillcolor=\"#A5D6A7\", color=\"#388E3C\"]\n    Inisialisasi [label=\"Inisialisasi: i = 1\"]\n    Eksekusi [label=\"Eksekusi blok kode\"]\n    Increment [label=\"i = i + 1\"]\n    Kondisi [label=\"i > 5?\", shape=diamond, fillcolor=\"#FFF9C4\", color=\"#FBC02D\"]\n    Selesai [label=\"Selesai\", shape=oval, fillcolor=\"#EF9A9A\", color=\"#C62828\"]\n\n    Mulai -> Inisialisasi\n    Inisialisasi -> Eksekusi\n    Eksekusi -> Increment\n    Increment -> Kondisi\n    Kondisi -> Eksekusi [label=\"Tidak\", color=\"#388E3C\"]\n    Kondisi -> Selesai [label=\"Ya\", color=\"#C62828\"]\n}\n","config":{"engine":"dot","options":null}},"evals":[],"jsHooks":[]}</script>
 </div>
 </div>
 </div>
@@ -1705,8 +1705,7 @@ diminta menggunakan bahasa pemrograman R untuk melakukan berbagai
 analisis berbasis data suhu tubuh tersebut.</p>
 <p>Secara khusus, staff IT diminta untuk:</p>
 <ol style="list-style-type: decimal">
-<li>Menghitung rata-rata suhu tubuh setiap pasien selama 7 hari
-menggunakan.</li>
+<li>Menghitung rata-rata suhu tubuh setiap pasien selama 7 hari.</li>
 <li>Menemukan pasien pertama yang mengalami demam ringan (≥37.5°C)
 selama 4 hari atau lebih.</li>
 <li>Menghitung jumlah pasien yang tidak pernah demam selama seminggu,
